# Linux-CPU-RAM-notifier

./: Cargo.toml  README.md
src/: lib.rs  main.rs
