[package]
name = "gnome_notif"
version = "0.1.0"
authors = ["colton <cloftus@princeton.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#sudo apt-get intall gnome-dev libnotify-dev
[dependencies]
libnotify = "1.0.3"
systemstat = "0.1.7"